syntax = "proto3";
package ElectronicSignaturesIndustries.xdvnode.xdvnode;

// this line is used by starport scaffolding # genesis/proto/import
import "xdvnode/documents.proto";

option go_package = "github.com/Electronic-Signatures-Industries/xdv-node/x/xdvnode/types";

// GenesisState defines the xdvnode module's genesis state.
message GenesisState {
    // this line is used by starport scaffolding # genesis/proto/state
		repeated Documents documentsList = 1; // this line is used by starport scaffolding # genesis/proto/stateField
		uint64 documentsCount = 2; // this line is used by starport scaffolding # genesis/proto/stateField
    // this line is used by starport scaffolding # ibc/genesis/proto
}
